create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1770,9 +1770,14 @@ body {
 .cid-qTkzRZLJNu .dropdown-item:hover {
   color: #ffffff !important;
 }
+.cid-resXN6hAue {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #ffffff;
+}
 .cid-recPY2Xo5B {
-  padding-top: 120px;
-  padding-bottom: 60px;
+  padding-top: 90px;
+  padding-bottom: 15px;
   background-color: #ffffff;
 }
 .cid-recPY2Xo5B .line {
@@ -2339,9 +2344,14 @@ body {
 .cid-red5OOJQnN .dropdown-item:hover {
   color: #ffffff !important;
 }
+.cid-resYOVMjit {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #ffffff;
+}
 .cid-red5OPGcFp {
-  padding-top: 120px;
-  padding-bottom: 60px;
+  padding-top: 90px;
+  padding-bottom: 15px;
   background-color: #ffffff;
 }
 .cid-red5OPGcFp .line {
@@ -3029,9 +3039,14 @@ body {
 .cid-reoHRwdGpi .dropdown-item:hover {
   color: #ffffff !important;
 }
+.cid-resYS8TEgR {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #ffffff;
+}
 .cid-reoHRx8Bxb {
-  padding-top: 120px;
-  padding-bottom: 60px;
+  padding-top: 90px;
+  padding-bottom: 15px;
   background-color: #ffffff;
 }
 .cid-reoHRx8Bxb .line {
@@ -3244,9 +3259,14 @@ body {
     -webkit-justify-content: center;
   }
 }
+.cid-resYUsaVW4 {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #ffffff;
+}
 .cid-reoM2rPPM1 {
-  padding-top: 120px;
-  padding-bottom: 60px;
+  padding-top: 90px;
+  padding-bottom: 15px;
   background-color: #ffffff;
 }
 .cid-reoM2rPPM1 .line {
